feat: Refactor medication management and tracking features
- Updated mock medications to include unique IDs and instruction IDs.
- Introduced TrackedMedicationsStore for managing tracked medications with ChangeNotifier.
- Integrated TrackedMedicationsStore into the main app using Provider.
- Enhanced interaction generation logic to utilize instruction IDs for better interaction checks.
- Added new screens for viewing and managing tracked medications.
- Implemented detailed medication views with associated instructions and warnings.
- Created a dialog for adding tracked medications with necessary details.
- Updated UI components for better user experience and consistency.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   flutter:
     sdk: flutter
   multi_select_flutter: ^4.1.3
+  collection: ^1.18.0 # Utility functions for Dart collections
+  provider: ^6.0.5 # Или последняя версия
 
 dev_dependencies:
   flutter_test:
