--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,10 @@ dependencies:
   multi_select_flutter: ^4.1.3
   collection: ^1.18.0 # Utility functions for Dart collections
   provider: ^6.0.5 # Или последняя версия
+  flutter_local_notifications: ^19.2.1   # ^17.1.0 
+  timezone: ^0.10.1
+  flutter_native_timezone: ^2.0.0
+  win_toast: ^0.3.1
 
 dev_dependencies:
   flutter_test:
